# Zappa

./: .gitignore  .pre-commit-config.yaml  .travis.yml  2021.11.15  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  OPTIMIZATION_CANDIDATES.csv  Pipfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  test  test_requirements.in  test_requirements.txt  test_settings.json  test_settings.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: community.md
example/: app.py  authmodule.py
tests/: test_app.py  test_asgi.py  test_asgi_app.py  test_asgi_autodetect_settings.py  test_asgi_binary_support_settings.py  test_asgi_settings.py  test_bad_additional_text_mimetypes_settings.json  test_bad_architecture_settings.json  test_bad_circular_extends_settings.json  test_binary_support_additional_text_mimetypes_settings.py  test_binary_support_settings.py  test_bot_exception_handler_settings.py  test_bot_handler_being_triggered.py  test_core.py  test_event_script_app.py  test_event_script_settings.py  test_exception_handler_settings.py  test_extra_s3_args.py  test_handler.py  test_msk_handler_being_triggered.py  test_settings.yaml  test_sse_settings.json  test_utilities.py  test_websocket.py  test_websocket_app.py  test_websocket_autoimport_settings.py  test_websocket_settings.py  test_ws_handlers_fixture.py  test_wsgi_binary_support_app.py  test_wsgi_root_log_level.py  test_wsgi_root_log_level_app.py  test_wsgi_root_log_level_settings_debug.py  test_wsgi_root_log_level_settings_info.py  test_wsgi_script_name_app.py  test_wsgi_script_name_settings.py  tests.py  tests_async.py  tests_async_old.py  tests_docs.py  tests_middleware.py  (+3 more)
zappa/: __init__.py  asgi.py  async.py  asynchronous.py  cli.py  core.py  handler.py  letsencrypt.py  middleware.py  s3_improved.py  (+3 more)
(+37 files in other folders)
